# minibot

./: .env.example  .gitignore  README.md  pyproject.toml
minibot/: __main__.py
minibot/agent/: autocompact.py  context.py  hook.py  loop.py  subagent.py
minibot/agent/tools/: collaboration.py  deployment.py  development.py  filesystem.py  image.py  integration.py  knowledge.py  language.py  message.py  multimodal.py  notebook.py  personalization.py  registry.py  sandbox.py  shell.py  voice.py  web.py
minibot/api/: __init__.py  server.py
minibot/bus/: bus.py  message.py
minibot/channels/: base.py  cli.py  feishu.py  manager.py  registry.py
minibot/cli/: __init__.py  commands.py  models.py  onboard.py  stream.py
minibot/command/: __init__.py  builtin.py  router.py
minibot/config/: loader.py  schema.py
minibot/core/: agent.py
minibot/cron/: __init__.py  service.py
minibot/heartbeat/: __init__.py  service.py
minibot/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
minibot/security/: __init__.py  network.py
minibot/session/: manager.py
minibot/skills/: README.md
minibot/skills/calculator/: SKILL.md
minibot/skills/cron/: SKILL.md
minibot/skills/github/: SKILL.md
minibot/skills/memory/: SKILL.md
minibot/skills/skill-creator/: SKILL.md
minibot/skills/skill-creator/scripts/: init_skill.py  (+1 more)
minibot/skills/summarize/: SKILL.md
minibot/templates/: AGENTS.md  HEARTBEAT.md  TOOLS.md  __init__.py
minibot/tools/: base.py  calculator.py  registry.py
minibot/utils/: __init__.py  helpers.py  path.py  tool_hints.py
