[project]
name = "minibot"
version = "0.1.0"
description = "A lightweight personal AI assistant framework"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "minibot contributors"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.35.0",
  "anthropic>=0.32.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "aiofiles>=23.2.1",
  "aiohttp>=3.9.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "typer>=0.9.0"
]

[project.scripts]
minibot = "minibot.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

